# embedded-ffi

./: Cargo.toml
src/: inner.rs  inner_alloc.rs  lib.rs  lossy.rs  os_str.rs
